<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:paddingEnd="24dp"
    android:paddingBottom="8dp">

    <!-- Drug Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDrug"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_treatment_drug"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDrug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:text="Актара" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Notes -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNotes"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/label_treatment_notes">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_treatment_notes"
            android:inputType="textMultiLine"
            android:lines="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Checkbox Quarantine -->
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbQuarantine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:checked="true"
        android:text="@string/checkbox_put_on_quarantine" />

</LinearLayout>
